# tutorial-icfp25

./: README.md  dune-project  dune-workspace  flake.nix
.github/workflows/: test-dune-pkg.yml  test-with-pkg.yml
docs/: 01-intro-to-parallelism-part-1.md  02-intro-to-parallelism-part-2.md
handson_activity/act03_gensym_capsules/: gensym_capsules.ml
slides/: index.html  index.md  oxcaml.css
